✅ test: add comprehensive renderer test coverage (32 tests)
Added evals/renderer.test.tsx with systematic coverage of:
- renderPlan() functionality: single/nested/sibling components, conditional rendering, arrays, fragments, mixed children, deep/wide trees
- serialize() edge cases: XML escaping, boolean attrs, undefined/null props, whitespace, indentation, object serialization
- createRoot() lifecycle: render/unmount behavior
- Edge cases: unicode/emoji, special XML chars, newlines/tabs, empty components, long prompts, numeric zero, empty strings

All 433 tests passing (401 existing + 32 new renderer tests).

Test coverage now includes:
- CLI (34 tests)
- Loader (33 tests)
- Renderer (32 tests)
- MCP integration
- Claude executor
- All components (Claude, Stop, Human, Task, etc.)
- Multi-phase execution
- Error recovery

--- a/docs/api-reference/execute-plan.mdx
+++ b/docs/api-reference/execute-plan.mdx
@@ -30,6 +30,10 @@ function executePlan(
     autoApprove?: boolean      // Skip plan approval prompts
     maxFrames?: number         // Maximum iterations (default: 100)
     timeout?: number           // Total timeout in milliseconds
+    verbose?: boolean          // Show detailed execution logs
+    mockMode?: boolean         // Enable mock mode (no real API calls)
+    model?: string             // Override the Claude model
+    maxTokens?: number         // Maximum tokens for Claude responses
     onPlan?: (xml: string, frame: number) => void  // Called before each frame
     onFrame?: (result: FrameResult) => void        // Called after each frame
   }
@@ -180,7 +184,7 @@ result.history.forEach((frame, i) => {
 
 Each frame in the Ralph Wiggum loop:
 
-1. **Render**: React components render to PluNode tree
+1. **Render**: React components render to SmithersNode tree
 2. **Serialize**: Tree converts to XML plan
 3. **Callback**: `onPlan` called with XML and frame number
 4. **Execute**: Pending `<Claude>` nodes are executed
