--- a/docs/cli/run.mdx
+++ b/docs/cli/run.mdx
@@ -204,10 +204,9 @@ When not using `--auto-approve`, you'll see the plan and can:
 
 - **Y/Enter**: Approve and execute
 - **n**: Cancel execution
-- **e**: Edit the plan before execution (opens in `$EDITOR`)
 
 ```
-? Execute this plan? (Y/n/e)
+? Execute this plan? (Y/n)
 ```
 
 ## Related Commands
