--- a/docs/guides/debugging.mdx
+++ b/docs/guides/debugging.mdx
@@ -63,7 +63,7 @@ Key things to look for:
 
 Each frame follows this sequence:
 
-1. **Render**: JSX components render to PluNode tree
+1. **Render**: JSX components render to SmithersNode tree
 2. **Find Pending**: Locate nodes without `_execution` status
 3. **Execute**: Run pending Claude/Subagent nodes
 4. **Callback**: `onFinished` triggers state updates
