🐛 fix: address 4 Codex review issues
Fixed issues from reviews 000641e, 2f95a92, 3f5c114, 46b3762:

1. Mock executor JSON.parse crash (000641e):
   - extractJsonFromPrompt now validates JSON before returning
   - Added try-catch safety layer when parsing extracted JSON
   - Prevents crash when JSON.stringify(...) captures invalid JSON

2. Nested execution docs mismatches (2f95a92):
   - Removed non-existent delegateExecution/planInstructions props
   - Fixed RenderNodeToolInput/Result type names to match actual code
   - Updated path generation example to show per-type indexing
   - Added clarification that TEXT nodes are excluded

3. State management docs issues (3f5c114, 46b3762):
   - Added functional update pattern example for useState
   - Fixed null check in addResult() method (plan && results.length)
   - Shows proper useState pattern before explaining Zustand benefits

All 573 tests still pass.

--- a/docs/concepts/state-management.mdx
+++ b/docs/concepts/state-management.mdx
@@ -112,6 +112,31 @@ function BadExample() {
 When all three subagents complete, each callback has `results = {}`, so only the last one wins.
 
 ```tsx
+// BETTER: useState with functional update
+function BetterExample() {
+  const [results, setResults] = useState({})
+  const [topics] = useState(['AI', 'ML', 'DL'])
+
+  return (
+    <>
+      {topics.map(topic => (
+        <Subagent key={topic}>
+          <Claude onFinished={(data) => {
+            // Use functional update to get latest state
+            setResults(prev => ({ ...prev, [topic]: data }))
+          }}>
+            Research {topic}
+          </Claude>
+        </Subagent>
+      ))}
+    </>
+  )
+}
+```
+
+This works, but Zustand is still cleaner for complex agent workflows:
+
+```tsx
 // CORRECT: Zustand solution
 const useStore = create((set) => ({
   results: {},
@@ -164,8 +189,9 @@ const useWorkflowStore = create((set, get) => ({
   }),
 
   addResult: (result) => {
-    const results = [...get().results, result]
-    const allDone = results.length === get().plan.tasks.length
+    const { results: currentResults, plan } = get()
+    const results = [...currentResults, result]
+    const allDone = plan && results.length === plan.tasks.length
     set({
       results,
       status: allDone ? 'reviewing' : 'executing',
