--- a/examples/multi-agent.mdx
+++ b/examples/multi-agent.mdx
@@ -1,6 +1,5 @@
 import { useState } from 'react'
 import { Claude, Phase, Step, Persona } from 'smithers'
-import { fileSystem, runTests } from './tools'
 
 # Multi-Agent Development Team
 
@@ -26,7 +25,7 @@ export function Architect({ task, onPlan }) {
 
 export function Developer({ subtask, onComplete }) {
   return (
-    <Claude tools={[fileSystem]} onFinished={onComplete}>
+    <Claude onFinished={onComplete}>
       <Persona role="senior developer">
         You write clean, tested code.
       </Persona>
@@ -45,7 +44,7 @@ export function Developer({ subtask, onComplete }) {
 
 export function Reviewer({ onApprove }) {
   return (
-    <Claude tools={[fileSystem, runTests]} onFinished={onApprove}>
+    <Claude onFinished={onApprove}>
       <Persona role="tech lead">
         You ensure code quality and correctness.
       </Persona>
