fix(examples): remove non-existent tool imports from multi-phase.mdx
Removed imports and tool references that don't exist:
- Removed 'import { webSearch, fileSystem } from ./tools'
- Removed tools=[webSearch] from first Claude component
- Removed tools=[fileSystem] from second Claude component

These tools were placeholder imports that don't exist in the example.
The example still demonstrates multi-phase execution with state management.

--- a/examples/multi-phase.mdx
+++ b/examples/multi-phase.mdx
@@ -1,6 +1,5 @@
 import { useState } from 'react'
 import { Claude, Phase, Step } from 'smithers'
-import { webSearch, fileSystem } from './tools'
 
 # Research Agent
 
@@ -12,7 +11,6 @@ export function ResearchAgent({ topic }) {
   if (phase === 'gather') {
     return (
       <Claude
-        tools={[webSearch]}
         onFinished={(result) => {
           setSources(result.sources)
           setPhase('analyze')
@@ -48,7 +46,7 @@ export function ResearchAgent({ topic }) {
   }
 
   return (
-    <Claude tools={[fileSystem]} onFinished={() => setPhase('done')}>
+    <Claude onFinished={() => setPhase('done')}>
       <Phase name="report">
         Write a research report based on this analysis:
         {JSON.stringify(analysis)}
